--- a/src/main/resources/META-INF/gradle-plugins/artfable.sass.properties
+++ b/src/main/resources/META-INF/gradle-plugins/artfable.sass.properties
@@ -1,2 +1,1 @@
-implementation-class=com.github.artfable.gradle.GradleLibsassPlugin
-gradle-plugin=artfable.sass:com.github.artfable.gradle:gradle-sass-plugin
+implementation-class=com.artfable.gradle.GradleLibsassPlugin
